[REFACTOR] fix code smells